hermes_fuzz_executed_few_shot_v2/fuzz_16_execution
'use strict';
var myFunction = [
  Symbol.species, 
  () => Promise.resolve(),
];
var myFunction = [()] => Promise.resolve();
var myFunction = {} => Promise.resolve();
var myFunction = [() => Promise.resolve(), {}];


Execution Output ------------------:
test.js:6:18: error: invalid arrow function parameter list
var myFunction = [()] => Promise.resolve();
                 ^~~~
